# Finance_app_api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Finance-application/: alembic.ini  docker-compose.yml  main.py  pytest.ini
Finance-application/alembic/versions/: 2024_12_04_1615-9e57d7c5cf4c_database_creation.py  2024_12_04_1658-679eb28dfeba_database_creation.py  2024_12_08_2051-6dfa4948449d_add_categories.py  2024_12_18_0106-630bcafa4b22_database_creation.py  2024_12_29_1950-b7d1089d56de_add_bigint.py  2025_01_03_1536-37224f72d3bb_database_creation.py  2025_01_03_1538-0b674650d5f2_drop_category.py  2025_01_03_1539-d0e8492d39b3_new_category_new_constraits.py  2025_01_03_1546-5728f61381af_change_name_category_id.py  2025_01_03_1811-4bd38631b4c0_drop_category.py  2025_01_21_2241-2ff84a6d3d89_add_separate_table_earnings.py  2025_02_12_1027-b528346bb568_add_base_worth_to_movie.py  2025_02_17_1030-0029c97b412d_add_total_balance_worth.py  2025_02_21_1127-8618fc4f7d38_change_name_total_balance_to_balace_in_.py  2025_02_22_1928-cd2ad9bba2d0_update_field_base_worth.py  2025_05_14_1106-de7841632f53_add_description_on_category.py  2025_05_14_1316-5d75467e0378_add_optional_descrition.py
Finance-application/celery_app/: app.py  config.py
Finance-application/core/: config.py
Finance-application/secure/: jwt_functions.py
Finance-application/tests/: conftest.py  schemas.py  test_auth_route.py  test_settings_rout.py
Finance_application/: .env_example  .test_env_example  alembic.ini  example_redis.conf  main.py
Finance_application/celery_app/: app.py  config.py  container.py  tasks.py
Finance_application/core/: config.py
Finance_application/secure/: jwt_functions.py
Finance_application/tests/: docker-compose.yml
(+110 files in other folders)
